# corporate_data_extraction

./: .gitignore  .pre-commit-config.yaml  .prettierignore  README.md  pyproject.toml
.github/workflows/: release.yaml  security.yaml  test-release.yaml  testing.yaml
code/: infer_on_pdf.py  kpi_mapping.csv
code/dataload/: db_export.py
code/esg_data_pipeline/: Dockerfile  Dockerfile_bak  entry.sh
code/esg_data_pipeline/esg_data_pipeline/: __init__.py  extraction_server.py
code/kpi_inference_data_pipeline/: requirements.txt
code/kpi_inference_data_pipeline/kpi_inference_data_pipeline/: __init__.py
code/model_pipeline/: Dockerfile  download_checkpoints.sh  metrics_per_kpi.py
code/model_pipeline/model_pipeline/: __init__.py  farm_trainer.py  inference_server.py  optuna_hyp.py  qa_farm_trainer.py  relevance_infer.py  text_kpi_infer.py
code/rule_based_pipeline/: Dockerfile  entry.sh  setup.py
code/rule_based_pipeline/rule_based_pipeline/: AnalyzerCluster.py  AnalyzerPage.py  AnalyzerTable.py  ConsoleTable.py  DataImportExport.py  Format_Analyzer.py  HTMLDirectory.py  HTMLItem.py  HTMLPage.py  HTMLWord.py  KPIMeasure.py  KPISpecs.py  README.md  TestDataSample.py  TestEvaluation.py  config.py  debug_xy.bat  globals.py  main.py  requirements.txt  test.py
data_extractor/: README.md
data_extractor/code/: config.py  config_path.py  infer_on_pdf.py  paths.py  s3_communication.py  setup_project.py  train_on_pdf.py  utils.py
data_extractor/code/coordinator/: Dockerfile  entry.sh  entry_coordinator.sh  requirements.txt  requirements_coordinator.txt  server_coordinator.py
data_extractor/code/dataload/: db_export.py
data_extractor/code/esg_data_pipeline/: Dockerfile  entry.sh  requirements.txt  setup.py
data_extractor/code/kpi_inference_data_pipeline/: requirements.txt  setup.py
data_extractor/code/model_pipeline/: Dockerfile  download_checkpoints.sh  entry.sh  metrics_per_kpi.py  requirements.txt  setup.py  vars.env
data_extractor/code/rule_based_pipeline/: DOCKERTEST  DOCKER_TEST  Dockerfile  requirements.txt  setup.py
data_extractor/code/settings/: main_settings.py  s3_settings.py
data_extractor/code/tests/: conftest.py  pytest.ini  test_train_on_pdf.py  (+1 more)
data_extractor/data/: coordinator_settings.yaml  s3_settings.yaml
data_extractor/docs/: S3_Connection_Notebook.ipynb  User_Manual.md  User_Manual_1_RedHatOpenShiftS3Usage.md  User_Manual_2_HowToSetUpANewProject.md  User_Manual_3_LocalUsage.md  data_extraction_demo.ipynb  project_structure.txt  s3_communication.py
docs/: project_structure.txt
inception_transformer/: inception_transformer.py  layer.json  readme.md  requirements.txt  settings.json  tagsets.json
notebooks/annotation_tool/: ANNOTATION_TOOL.ipynb  README.md  annotations.xlsx
notebooks/esg_data_pipeline/: Demo_ESG_Data_Extraction_Jul_16.ipynb  extraction_and_curation.ipynb
notebooks/model_pipeline/: Demo_ESG_data_training_Jul_24.ipynb  Demo_ESG_data_training_Jul_25.ipynb
scripts/: pipaudit.sh
(+169 files in other folders)
